--- a/FOSS/0.md
+++ b/FOSS/0.md
@@ -14,7 +14,7 @@ Melon Cave is all about using Transformative Discipleship Technology (TDT).
 
 4) [100 Modules Improving Christian Prayer Life](https://meloncave.github.io/FOSS/4/)
 
-5) [Time Mgmt Discipline Without Regrets, Without Worries](https://meloncave.github.io/FOSS/5/)
+5) [100 Modules Transformative Prayer-Centric Christian Time Management Training](https://meloncave.github.io/FOSS/5/)
 
 6) [Nutrition and Diet to Support Neuroplasticity](https://meloncave.github.io/FOSS/6/)
 
