--- a/FOSS/4.md
+++ b/FOSS/4.md
@@ -151,7 +151,7 @@ This isn't just spiritual talk. It's where scripture, psychology, and neuroscien
 
 ### Module 4: Neuroscience of Prayer and Spiritual Practices
 
-Let's cut straight to the cerebral chase. [Brain science has caught up](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4000465/) with what believers have known for centuries. Prayer isn't just spiritual talk—it leaves actual fingerprints on your neural circuits.
+Let's cut straight to the cerebral chase. [The edgiest edge of neuroscience is beginning to catch up](http://neurohackers.com/index.php/fr/menu-top-neurotheque/40-cat-nh-methods-tech/91-meditation-a-selection-of-articles) with what practioners of prayer and meditation have known for thousands of years. Prayer isn't just spiritual talk—the repeated practice of focusing the mind on one thought and developing the discipline of paying attention leaves actual fingerprints on your neural circuits.
 
 Gone are the days of vague behavioral studies. We're now watching prayer happen in real-time through [fMRI](https://www.nibib.nih.gov/science-education/science-topics/magnetic-resonance-imaging-mri), [EEG](https://www.hopkinsmedicine.org/health/treatment-tests-and-therapies/electroencephalogram-eeg), and [PET scans](https://www.mayoclinic.org/tests-procedures/pet-scan/about/pac-20385078). Different prayers, different brain signatures. Simple as that. Contemplative, intercessory, ritual—each lights up its own [neural neighborhood](https://qbi.uq.edu.au/brain/brain-anatomy/neural-circuits) while sharing common ground in attention and emotional processing centers. Real cool, man.
 
